--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
     }
 }
 
+kapt {
+    generateStubs = true
+}
+
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
@@ -36,9 +40,13 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.3.0'
+    implementation 'com.google.dagger:dagger:2.12'
+    kapt 'com.google.dagger:dagger-compiler:2.12'
+
+    implementation 'com.nytimes.android:cache3:3.0.0-beta'
+    implementation 'com.nytimes.android:store-kotlin3:3.0.0-beta'
+    implementation 'com.nytimes.android:middleware-moshi3:3.0.0-beta'
+    implementation 'com.nytimes.android:filesystem3:3.0.0-beta'
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
 
